Don't to check-dir for each .qcow2 target

--- a/images/Makefile
+++ b/images/Makefile
@@ -28,7 +28,7 @@ check-dir:
 
 ALL_QCOW2 := $(patsubst %,%.qcow2,$(ALL_TDLS))
 heat-jeos: $(ALL_QCOW2)
-$(ALL_QCOW2): check-dir
+$(ALL_QCOW2):
 	heat-jeos -dy create $(subst .qcow2,,$@)
 
 CLEAN_QCOW2 := $(patsubst %,clean-%,$(ALL_TDLS))
